Reetan.Nayak Dev 25/force-app/main/default/objects/Salesforceapp__c/Salesforceapp__c.object-meta.xml
<CustomObject>
    <label>Salesforceapp</label>
    <nameField>
        <label>Salesforceapp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforceapp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>