Reetan.Nayak Dev 25/force-app/main/default/objects/Salesforceapp__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <label>Access_Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>