Reetan.Nayak Dev 25/force-app/main/default/objects/Salesforceapp__c/fields/Client_id__c.field-meta.xml
<CustomField>
    <fullName>Client_id__c</fullName>
    <label>Client_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>