Reetan.Nayak Dev 25/force-app/main/default/objects/Salesforceapp__c/fields/extendedPermissions__c.field-meta.xml
<CustomField>
    <fullName>extendedPermissions__c</fullName>
    <label>extendedPermissions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>